kubernetes/base/apps/arunanshu-dev/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arunanshu-dev
  namespace: arunanshu-dev
  labels:
    app: arunanshu-dev # VMServiceScrape selector target
spec:
  type: ClusterIP
  selector:
    app: arunanshu-dev
  ports:
    - port: 3000
      targetPort: 3000
      name: http
      protocol: TCP
    - port: 9091
      targetPort: 9091
      name: metrics
      protocol: TCP
