kubernetes/base/apps/arunanshu-dev/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: arunanshu-dev
  namespace: arunanshu-dev
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: web
  hostnames:
    - arunanshu.dev
    - www.arunanshu.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: arunanshu-dev
          port: 3000
          weight: 1
